<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sp_black"
    tools:context=".dashUi.ForgotPassword">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:srcCompat="@drawable/passwordreset" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="345dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:paddingLeft="25dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/forgot_your_password"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:paddingLeft="25dp"
            android:text="@string/worry_less_let_s_reset_your_password"
            android:textColor="@android:color/darker_gray" />

        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:paddingRight="10dp"
            app:mtf_image="@drawable/ic_mail"
            app:mtf_labelColor="#666">

            <EditText
                android:id="@+id/emailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHighlight="@color/dark_orange"
                android:textColorLink="@color/sp_black"
                android:textCursorDrawable="@drawable/ic_edit"
                android:textSize="15sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/reset_password"
            app:backgroundTint="@color/success" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>