<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sp_black"
    tools:context=".dashUi.ProfileActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:padding="16dp"
            android:src="@drawable/user"
            app:civ_border_color="@android:color/darker_gray"
            app:civ_border_width="2dp" />

        <ImageView
            android:id="@+id/post_profile"
            android:layout_width="51dp"
            android:layout_height="48dp"
            android:layout_alignStart="@+id/profile_image"
            android:layout_alignLeft="@+id/profile_image"
            android:layout_alignTop="@+id/profile_image"
            android:layout_alignEnd="@+id/profile_image"
            android:layout_alignRight="@+id/profile_image"
            android:layout_alignBottom="@+id/profile_image"
            android:layout_marginStart="125dp"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="154dp"
            android:layout_marginEnd="27dp"
            android:layout_marginRight="27dp"
            android:layout_marginBottom="2dp"
            app:srcCompat="@drawable/ic_camera" />

    </RelativeLayout>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="478dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@drawable/ic_profile"
            app:tint="@android:color/darker_gray"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:paddingLeft="25dp"
            android:text="Name"
            android:textColor="@android:color/darker_gray"
            app:layout_column="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:paddingLeft="25dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_column="1"
            app:layout_row="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            app:layout_column="2"
            app:layout_row="1"
            app:srcCompat="@drawable/ic_edit"
            app:tint="@android:color/darker_gray"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:text="@string/this_is_not_your_username_or_pin_this_name_will_be_visible_to_your_profile_dashboard"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            app:layout_column="1"
            app:layout_row="2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            app:layout_column="0"
            app:layout_row="3"
            app:srcCompat="@drawable/ic_info"
            app:tint="@android:color/darker_gray"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:paddingLeft="25dp"
            android:paddingTop="20dp"
            android:text="@string/about"
            android:textColor="@android:color/darker_gray"
            app:layout_column="1"
            app:layout_row="3" />

        <TextView
            android:id="@+id/profile_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:paddingLeft="25dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_column="1"
            app:layout_row="4" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            app:layout_column="2"
            app:layout_row="3"
            app:srcCompat="@drawable/ic_edit"
            app:tint="@android:color/darker_gray"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            app:layout_column="0"
            app:layout_row="5"
            app:srcCompat="@drawable/ic_mail"
            app:tint="@android:color/darker_gray"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:paddingLeft="25dp"
            android:paddingTop="20dp"
            android:text="@string/email"
            android:textColor="@android:color/darker_gray"
            app:layout_column="1"
            app:layout_row="5" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            app:layout_column="2"
            app:layout_row="5"
            app:srcCompat="@drawable/ic_edit"
            app:tint="@android:color/darker_gray"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:paddingLeft="25dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_column="1"
            app:layout_row="6" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            app:layout_column="0"
            app:layout_row="7"
            app:srcCompat="@drawable/ic_phone"
            tools:ignore="VectorDrawableCompat"
            app:tint="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:paddingLeft="25dp"
            android:paddingTop="20dp"
            android:text="@string/phone"
            android:textColor="@android:color/darker_gray"
            app:layout_column="1"
            app:layout_row="7" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            app:layout_column="2"
            app:layout_row="7"
            app:srcCompat="@drawable/ic_edit"
            app:tint="@android:color/darker_gray"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/profile_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:paddingLeft="25dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_column="1"
            app:layout_row="8" />

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>